@@ -1,3 +1,4 @@
+#include <sys/types.h>
 #include "auto_qmail.h"
 #include "auto_split.h"
 #include "auto_uids.h"
@@ -9,7 +10,7 @@ char buf[100 + FMT_ULONG];
 
 void dsplit(base,uid,mode)
 char *base; /* must be under 100 bytes */
-int uid;
+uid_t uid;
 int mode;
 {
   char *x;
