@@ -1,4 +1,5 @@
 #include <sys/stat.h>
+#include <sys/types.h>
 #include <string.h>
 #include <unistd.h>
 #include "strerr.h"
@@ -10,7 +11,7 @@ extern void hier();
 
 #define FATAL "instchown: fatal: "
 
-void h(char *home, int uid, int gid, int mode)
+void h(char *home, uid_t uid, gid_t gid, int mode)
 {
   if (chown(home,uid,gid) == -1)
     strerr_die4sys(111,FATAL,"unable to chown ",home,": ");
@@ -18,7 +19,7 @@ void h(char *home, int uid, int gid, int mode)
     strerr_die4sys(111,FATAL,"unable to chmod ",home,": ");
 }
 
-void d(char *home, char *subdir, int uid, int gid, int mode)
+void d(char *home, char *subdir, uid_t uid, gid_t gid, int mode)
 {
   if (chdir(home) == -1)
     strerr_die4sys(111,FATAL,"unable to switch to ",home,": ");
@@ -28,7 +29,7 @@ void d(char *home, char *subdir, int uid, int gid, int mode)
     strerr_die6sys(111,FATAL,"unable to chmod ",home,"/",subdir,": ");
 }
 
-void p(char *home, char *fifo, int uid, int gid, int mode)
+void p(char *home, char *fifo, uid_t uid, gid_t gid, int mode)
 {
   if (chdir(home) == -1)
     strerr_die4sys(111,FATAL,"unable to switch to ",home,": ");
@@ -38,7 +39,7 @@ void p(char *home, char *fifo, int uid, int gid, int mode)
     strerr_die6sys(111,FATAL,"unable to chmod ",home,"/",fifo,": ");
 }
 
-void c(char *home, char *subdir, char *file, int uid, int gid, int mode)
+void c(char *home, char *subdir, char *file, uid_t uid, gid_t gid, int mode)
 {
   if (chdir(home) == -1)
     strerr_die4sys(111,FATAL,"unable to switch to ",home,": ");
@@ -58,7 +59,7 @@ void c(char *home, char *subdir, char *file, int uid, int gid, int mode)
     strerr_die6sys(111,FATAL,"unable to chmod .../",subdir,"/",file,": ");
 }
 
-void z(char *home, char *file, int len, int uid, int gid, int mode)
+void z(char *home, char *file, int len, uid_t uid, gid_t gid, int mode)
 {
   if (chdir(home) == -1)
     strerr_die4sys(111,FATAL,"unable to switch to ",home,": ");
