@@ -1,7 +1,9 @@
 #ifndef UIDGID_H
 #define UIDGID_H
 
-extern int inituid(char *uid);
-extern int initgid(char *gid);
+#include <sys/types.h>
+
+extern uid_t inituid(char *uid);
+extern gid_t initgid(char *gid);
 
 #endif
